#pragma once

#include "canvas.h"
#include "services/exporter.h"
#include "services/importer.h"

#include <memory>
#include <string>

class Editor {
public:
  explicit Editor(std::shared_ptr<Exporter> e, std::shared_ptr<Importer> i) : p_exporter(e), p_importer(i) {}

  void create_image(const Size &);
  void load_image(const std::string &);
  void save_image(const std::string &);
  void close_image();
  std::weak_ptr<Canvas> get_canvas() const { return p_canvas; }

private:
  std::shared_ptr<Canvas> p_canvas{nullptr};
  std::shared_ptr<Exporter> p_exporter;
  std::shared_ptr<Importer> p_importer;
};
